--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "scripts": {
     "start": "server.js"
   },
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {
     "async": "*",
     "request": "*"
+  },
+  "devDependencies": {},
+  "engines": {
+    "node": "*"
   }
 }
