--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "server.js"
   },
-  "version": "0.0.1",
+  "version": "0.0.1-1",
   "dependencies": {
     "async": "*",
     "request": "*"
