--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "server.js"
   },
-  "version": "0.0.2-3",
+  "version": "0.0.3",
   "dependencies": {
     "async": "*",
     "request": "*",
@@ -15,4 +15,3 @@
     "node": "*"
   }
 }
-
